<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.emazdoor.abacuscalculator.ui.MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <TextView
            android:id="@+id/result"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@{viewModel.mutableLiveResult}"
            android:textColor="@color/sky_blue"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/result" />


        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:hint="@string/enter_values_with_following_numpad"
            android:importantForAutofill="no"
            android:text="@={viewModel.mutableLiveExpression}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constrainedHeight="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/buttonContainer"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetTop="0dp"
                    android:text="@string/clear" />

                <Button
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetTop="0dp"
                    android:text="@string/add" />

                <Button
                    android:id="@+id/subtract"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetTop="0dp"
                    android:text="@string/subtract" />

                <Button
                    android:id="@+id/divide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetTop="0dp"
                    android:text="@string/divide" />

                <Button
                    android:id="@+id/multiply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetTop="0dp"
                    android:text="@string/multiply" />

                <Button
                    android:id="@+id/remainder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetTop="0dp"
                    android:text="@string/remainder" />

                <Button
                    android:id="@+id/split"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetTop="0dp"
                    android:text="@string/split" />

                <Button
                    android:id="@+id/equal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetTop="0dp"
                    android:text="@string/equal" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>